# midojo

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Containerfile  README.md  pyproject.toml  translator.md
.github/: CODEOWNERS
.github/workflows/: test.yml
docs/: shell-redteam-poc.md  shell-redteam-presentation.md  shell-redteam-readme.md
docs/design/: grading-context.md
pi-sdk/src/: index.ts
scripts/: test_mcp_sdk_e2e.sh  test_pi_e2e.sh
src/midojo/: __init__.py  agent_client.py  attack.py  attack_types.py  backends.py  env_inference.py  grading.py  mcp_sdk.py  openshell_backend.py  openshell_logs.py  orchestrator.py  predicates.py  probes.py  serve.py  shell_environment.py  suites.py  translator.py  types.py  verification.py  verifier.py  yaml_task_suite.py
src/midojo/app/: dependencies.py  main.py  models.py  state.py
src/midojo/app/routers/: admin.py  current.py  environment.py  mcp.py  runs.py  suite.py  tasks.py  tools.py
src/midojo/attacks/: __init__.py  builtin.py  records.py  registry.py  taxonomy.py
src/midojo/attacks/data/: garak_access_shell_commands.json  garak_hijack_hate_humans.json  garak_hijack_kill_humans.json  garak_hijack_long_prompt.json  garak_sql_injection.json
src/midojo/pi-sdk/: package.json
src/midojo/pi-sdk/src/: index.ts
src/midojo/providers/: __init__.py  rhacs.py
src/midojo/suites/weather/: __init__.py  agent.py  task_suite.py  user_tasks.py
src/midojo/suites/weather/a2a_agent/: __init__.py  agent.py  environment.py  fake_mcp.py  real_mcp.py  tools.py
src/midojo/suites/weather/data/: suite.yaml
src/midojo/suites/weather/pi_agent/: AGENTS.md
src/midojo/verifiers/: __init__.py  builtin.py  openshell.py  rhacs.py
suites/document_assistant/: __init__.py  suite.yaml
suites/minibank/: README.md  __init__.py  suite.yaml
suites/minibank/a2a_agent/: agent.py  fake_mcp.py  real_mcp.py
suites/minibank/deploy/: agent-secret.example.yaml  agent.yaml  control-plane.yaml  fake-mcp.yaml  kustomization.yaml  real-mcp.yaml  run-ladder.job.yaml
suites/minibank/real_environment/: bank_state.py  bank_tools.py  bank_tools_unsafe.py
suites/shell_financial_report/: __init__.py  suite.yaml  validate.py
suites/weather/: __init__.py  suite.yaml  task_suite.py
suites/weather/a2a_agent/: fake_mcp.py  real_mcp.py
suites/weather/data/: suite.yaml
suites/weather/ogx_agent/: run.yaml
suites/weather/pi_agent/.pi/extensions/: 01-fake-tools.ts
tests/: conftest.py  test_acs_predicates.py  test_admin.py  test_agent_client.py  test_attack_types.py  test_attacks.py  test_control_api.py  test_env_inference.py  test_grading.py  test_mcp_sdk.py  test_mcp_server.py  test_observations_grading.py  test_openshell_backend.py  test_predicates.py  test_proxy.py  test_shell_predicates.py  test_suite_check.py  test_verification.py  test_verifier.py  test_yaml_task_suite.py
(+3 files in other folders)
