[project]
name = "midojo"
version = "0.1.0"
description = "Man-in-the-middle red teaming for AI agents, built on AgentDojo"
requires-python = ">= 3.10"
dependencies = [
    "agentdojo",
    "pydantic>=2.7.1",
    "pyyaml>=6.0.1",
    "click>=8.1.7",
    "fastmcp",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "httpx>=0.28",
    "a2a-sdk>=1.0",
    "openai>=1.0",
    "protobuf>=5.29,<6",
    "rich>=13.0",
]

[tool.uv.sources]
agentdojo = { path = "../agentdojo", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.0.2",
    "pytest-asyncio>=0.24",
    "ruff>=0.3.0",
    "pyright>=1.1.362",
    "python-dotenv[cli]>=1.0.0",
]

[project.scripts]
midojo-serve = "midojo.serve:main"
midojo-run = "midojo.orchestrator:main"
weather-mcp-serve = "midojo.suites.weather.a2a_agent.real_mcp:main"
weather-agent = "midojo.suites.weather.a2a_agent.agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/midojo"]

[tool.uv]
managed = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "UP", "I", "ERA", "N", "RUF"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
