[project]
name = "midojo"
version = "0.1.0"
description = "Man-in-the-middle red teaming for AI agents"
requires-python = ">= 3.12"
dependencies = [
    "pydantic>=2.7.1",
    "pyyaml>=6.0.1",
    "click>=8.1.7",
    "fastmcp",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "httpx>=0.28",
    "a2a-sdk>=1.0",
    "protobuf>=5.29,<6",
    "rich>=13.0",
]

[project.optional-dependencies]
# Dependencies for running the bundled suites' example agents (a2a, ogx, ...).
suites = [
    "ogx>=0.8.0,<0.9.0",
    "ogx-client>=0.8.0,<0.9.0",
    "faiss-cpu",
    "chardet",
    "pypdf",
    "openai>=1.0",
]
dev = [
    "pytest>=8.0.2",
    "pytest-asyncio>=0.24",
    "ruff>=0.3.0",
    "pyright>=1.1.362",
    "python-dotenv[cli]>=1.0.0",
]

[project.scripts]
midojo-serve = "midojo.serve:main"
midojo-run = "midojo.orchestrator:main"
weather-fake-mcp-serve = "suites.weather.a2a_agent.fake_mcp:main"
weather-real-mcp-serve = "suites.weather.a2a_agent.real_mcp:main"
weather-a2a-agent = "suites.weather.a2a_agent.agent:main"
minibank-fake-mcp-serve = "suites.minibank.a2a_agent.fake_mcp:main"
minibank-real-mcp-serve = "suites.minibank.a2a_agent.real_mcp:main"
minibank-a2a-agent = "suites.minibank.a2a_agent.agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/midojo", "suites"]

[tool.uv]
managed = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "UP", "I", "ERA", "N", "RUF"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
